# RawPoll

./: .gitignore  Cargo.toml  Procfile  README.md  Rocket.toml  package-lock.json  package.json  polls.json  tsconfig.json
public/: create.html  index.html  new.html  poll.html  vote.html
src/: main.rs  poll.rs  templating.rs
src/routes/: create.rs  index.rs  poll.rs  public.rs  vote.rs
src/routes/api/: poll.rs  vote.rs
static/javascript/: create.js  poll.js  vote.js
static/js/: newPoll.js  poll.js
typescript/: create.ts  poll.ts  vote.ts
