[package]
name = "raw-poll"
version = "0.1.0"
authors = ["user <andypythonappdeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# dino = { path = "C:\\Users\\user\\Desktop\\Andy\\Rust\\dino" }
dino = { git = "https://github.com/Andy-Python-Programmer/dino" }
uuid = { version = "0.8", features = ["v4"] }


[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]