[package]
name = "raw-poll"
version = "0.1.0"
authors = ["user <andypythonappdeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde_json = "1.0.59"
dotenv = "0.15.0"
futures = "0.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]