[package]
name = "raw-poll"
version = "0.1.0"
authors = ["user <andypythonappdeveloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde_json = "1.0.59"
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "1.0.117", features = ["serde_derive"] }
async-tungstenite = { version = "*", features = ["tokio-runtime"] }
tokio = { version = "0.3.3", features = ["macros", "net", "rt-multi-thread"]}
dino = { git = "https://github.com/Andy-Python-Programmer/dino" }
# dino = { path = "C:\\Users\\user\\Desktop\\Andy\\Rust\\dino" }
uuid = { version = "0.8", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]